k8s/polybot/deployment.yaml
# Deploy polybot
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
  labels:
    app: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
      - name: polybot-instance
        image: barrotem/polybot:v2.0.1-k8s
