k8s/polybot/service.yaml
# Polybot service
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  labels:
    app: polybot
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
