k8s/polybot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  labels:
    app: polybot
spec:
  ingressClassName: nginx
  rules:
  - host: barrotem-polybot-k8s.devops-int-college.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot-service
            port:
              number: 8443
